Fix spacing of nav links

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -38,8 +38,8 @@ nav h1 {
 nav a {
   font-weight: 500;
   text-decoration: none;
-  margin-left: 30px;
-  margin-right: 60px;
+  margin-left: 25px;
+  margin-right: 25px;
   transition: color 0.15s ease-in-out;
 }
 
